--- a/package.json
+++ b/package.json
@@ -129,9 +129,7 @@
     "stylelint": "^13.12.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-scss": "^3.17.1",
-    "webpack": "^5.33.2",
-    "webpack-bundle-analyzer": "^4.4.1",
-    "webpack-cli": "^4.6.0"
+    "webpack-bundle-analyzer": "^4.4.1"
   },
   "scripts": {
     "build": "NODE_ENV=production webpack --config config/prod.webpack.config.js",
